# linux-rga

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/rgaBlit/: rgaBlit.cpp
demo/rgaClip/: rgaClip.cpp
demo/rgaCopy/: rgaCopy.cpp
demo/rgaRotation/: rgaRotation.cpp
demo/rgaSlt/: CMakeLists.txt  rgaSlt.cpp
demo/rgaUserspace/: rgaUserspace.cpp
docs/: README.md
pkgconfig/: librga.pc.cmake
src/: NormalRgaApi.cpp  RockchipRga.cpp
